# tiny-tiny-pascal

./: .gitignore  CMakeLists.txt  README.md  build_debug.bat  build_release.bat  compile_flags.txt  generate.bat  main.cpp  types.h
docs/: grammar.bnf
lexer/: buffered_istream.cpp  buffered_istream.h  scanner.cpp  scanner.h  scanner.hpp  token.cpp  token.h  token.hpp  token_type.cpp  token_type.h  token_type.hpp  token_value_types.cpp  token_value_types.h
lexer/tests/: 01.out  02.in  02.out
lexer/tokens/: token.cpp  token.hpp  token_type.cpp  token_type.hpp
src/: exception.cpp  exception.h  main.cpp  position.h
src/core/: exception.h
src/generator/: generator.cpp  generator.h
src/lexer/: buffered_istream.cpp  buffered_istream.h  scanner.cpp  scanner.h  token.cpp  token.h  token_type.cpp  token_type.h  token_value_types.cpp  token_value_types.h
src/parser/: node.cpp  node.h  parser.cpp  parser.h
src/parser/node/: node.cpp  node.h  node_base_expression.h  node_declaration.cpp  node_declaration.h  node_expression.cpp  node_expression.h  node_program.cpp  node_program.h  node_statement.cpp  node_statement.h  node_type.cpp  node_type.h  nodes.h
src/scanner/: buffered_istream.cpp  buffered_istream.h  scanner.cpp  scanner.h  token.cpp  token.h  token_type.cpp  token_type.h  token_value_types.cpp  token_value_types.h
src/simple_parser/: node.cpp  node.h  simple_parser.cpp  simple_parser.h
src/symbol_table/: symbol.cpp  symbol.h  symbol_function.cpp  symbol_function.h  symbol_table.cpp  symbol_table.h  symbol_table_stack.cpp  symbol_table_stack.h  symbol_type.cpp  symbol_type.h  symbol_type_array.cpp  symbol_type_array.h  symbol_var.cpp  symbol_var.h
src/visitor/: base_visitor.h  base_visitor_with_result.cpp  base_visitor_with_result.h  generator_visitor.cpp  generator_visitor.h  printer_visitor.cpp  printer_visitor.h  semantic_visitor.cpp  semantic_visitor.h
testers/: basic_tester.cpp  basic_tester.h  scanner_tester.cpp  scanner_tester.h  simple_parser.h  simple_parser_tester.cpp  simple_parser_tester.h  test_report.cpp  test_report.h  tests.cpp
tests/: compile.ps1  lexer.cpp  lexer.h  main.cpp  simple_parser.cpp  simple_parser.h  test_report.cpp  test_report.h  tester.cpp  tester.h  tests.cpp
tests/generator/call/: 01_writeln.in  01_writeln.out  02_write.in  02_write.out
tests/generator/declarations/: 01_var.in  01_var.out  02_const.in  02_const.out
tests/generator/expressions/: 01_integer_add_integer.in  02_integer_sub_integer.in  03_integer_mul_integer.in  04_integer_quo_integer.in  05_integer_or_integer.in  06_integer_and_integer.in  07_integer_div_integer.in  09_integer_xor_integer.in  10_integer_shl_integer.in  11_integer_shr_integer.in  12_unary_op_integer.in  13_integer_eq_integer.in  14_integer_les_integer.in  15_integer_neq_integer.in  16_integer_leq_integer.in  17_integer_gtr_integer.in  18_integer_geq_integer.in  19_double_add_double.in  19_double_add_double.out  20_double_sub_double.in  21_double_mul_double.in  21_double_mul_double.out  21_double_quo_double.in  21_double_quo_double.out  22_unary_op_double.in  22_unary_op_double.out  23_double_eq_double.in  24_double_les_double.in  25_double_neq_double.in  26_double_leq_double.in  27_double_gtr_double.in  28_double_geq_double.in  29_array.in  30_record.in  30_record.out
tests/generator/statement/: 01_for.in  01_for.out  02_if.in  03_while.in  04_assign_integer.in  04_assign_integer.out  05_assign_double.in  05_assign_double.out  06_assign_string.in  06_assign_string.out
tests/lexer/: 01_empty_file.out  02_id.in  02_id.out  03.in  03_keyword.out  04.in  04_operator.out  05_integer.in  05_integer.out  06_real.in  06_real.out  07_string.in  07_string.out  08_separators.out  09_line_comment.in  09_line_comment.out  10_block_comment.in  10_block_comment.out  11_hello_world.in  11_hello_world.out  12_sum.out  14_unterminated_string.in  14_unterminated_string.out  15_unterminated_block_comment.in  15_unterminated_block_comment.out  16_long_token_selection_check.out  17_integer_overflow.in  17_integer_overflow.out  18_integer_overflow.in  18_integer_overflow.out  19_factorial.out  20_string_with_spaces.in  20_string_with_spaces.out  21_integer_hex_overflow.in  21_integer_hex_overflow.out  22_integer_octa_overflow.out  23_integer_bin_overflow.in  23_integer_bin_overflow.out  24_double.in  24_double.out  (+2 more)
tests/parser/declarations/: 01_empty_file.out  (+26 more)
tests/scanner/: 01_empty_file.out  02_id.out  03_keyword.in  03_keyword.out  04_operator.in  04_operator.out  05_integer.in  05_integer.out  06_real.in  06_real.out  07_string.out  08_separators.in  08_separators.out  09_line_comment.out  10_block_comment.in  10_block_comment.out  11_hello_world.out  12_sum.in  12_sum.out  13_unterminated_string.in  13_unterminated_string.out  15_unterminated_block_comment.out  16_long_token_selection_check.in  16_long_token_selection_check.out  17_integer_overflow.out  18_integer_overflow.out  19_factorial.in  19_factorial.out  20_string_with_spaces.out  21_integer_hex_overflow.out  22_integer_octa_overflow.in  22_integer_octa_overflow.out  23_integer_bin_overflow.out  24_double.out  25_range.in  25_range.out  26_one_quote.out  27.out  27_has_without_number.in  27_has_without_number.out  (+8 more)
tests/simple_parser/: 01_empty_file.out  02.in  02.out  03_double.out  05_number_add_number.out  06_number_sub_number.out  07_number_add_and_subs.in  07_number_add_and_subs.out  08_mul_and_expressin_with_add.in  08_mul_and_expressin_with_add.out  09_mul_add_mul.in  09_mul_add_mul.out  10_number_mul_number.out  11_number_div_number.out  12_div_add_div.in  12_div_add_div.out  13_big_expression.in  13_big_expression.out  14_expression_with_ids.in  14_expression_with_ids.out  15_operation_in_row.in  15_operation_in_row.out  16_only_operation.out  17_extra_parantheses.in  17_extra_parantheses.out  18_only_parantheses.out  19_open_parantheses.in  19_open_parantheses.out  2.in  20_parantheses_add_number.in  20_parantheses_add_number.out  21_expression_with_open_parantheses.in  21_expression_with_open_parantheses.out  22.out  22_div_mul_div.in
(+879 files in other folders)
